# meet-whisperx

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  _compose.yml  compose.yml  logging-config.yaml  pyproject.toml
.github/workflows/: build.yml  build_and_push.yml  docker-hub.yml  meet-whisperx.yml
app/: Dockerfile  config.py  lifespan.py  main.py  security.py
app/endpoints/: audio.py  health.py  models.py  monitoring.py
app/schemas/: audio.py  models.py
app/services/: transcription.py
app/tests/: conftest.py  test_audio_transcriptions.py
app/utils/: args.py  config.py  exceptions.py  lifespan.py  security.py
